--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
 from = "/*"
 to = "/index.html"
 status = 200
+
+[[redirects]]
+from = "/api/*"
+to = "http://95.163.230.254:3000:splat"
+status = 200
